--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="Content-Security-Policy"/>
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy"/>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
 
-<script type="text/javascript" src="http://localhost:5151/app.bundle.js"></script></head>
-<body>
+<link href="app.7263aa52f4027bc631a3.css" rel="stylesheet"><script type="text/javascript" src="app.7263aa52f4027bc631a3.js"></script></head>
+<body ng-app="TestJob">
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
@@ -17,6 +17,37 @@
   Templates are in the /templates folder (but you could also
   have templates inline in this html file if you'd like).
 -->
-<ion-nav-view></ion-nav-view>
+
+<gallery>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+    <g-img>
+        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    </g-img>
+
+</gallery>
+
 </body>
 </html>
