--- a/www/index.html
+++ b/www/index.html
@@ -6,27 +6,23 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-<link href="app.52d7f67c8535a73d0846.css" rel="stylesheet"><script type="text/javascript" src="app.52d7f67c8535a73d0846.js"></script></head>
+<link href="app.471724af90e66fbaaa1d.css" rel="stylesheet"><script type="text/javascript" src="app.471724af90e66fbaaa1d.js"></script></head>
 <body ng-app="TestJob" ng-controller="MainCtrl as Main">
-<!--
-  The nav bar that will be updated as we navigate between views.
--->
 
-<!--
-  The views will be rendered in the <ion-nav-view> directive below
-  Templates are in the /templates folder (but you could also
-  have templates inline in this html file if you'd like).
--->
+<div class="content">
+    <div class="head">
+        <span>Количество элементов в галерее: </span>
+        <input type="number" ng-model="Main.blockCounts">
+        <span><button ng-click="Main.draw()"> Перерисовать</button></span>
+    </div>
 
-<gallery>
-    <g-img ng-repeat="block in Main.blocks">
-        <img height="{{block.height}}px"
-             width="{{block.width}}px"
-             ng-src="{{block.url}}">
-    </g-img>
-</gallery>
-<div class="text-center" style="text-align: center;">
-    <span>Сгенерировать </span><input type="number" ng-model="Main.blockCounts">
+    <gallery>
+        <g-img ng-repeat="block in Main.blocks">
+            <img height="{{block.height}}px"
+                 width="{{block.width}}px"
+                 ng-src="{{block.url}}">
+        </g-img>
+    </gallery>
 </div>
 
 </body>
